--- a/app/locale/nl_NL/Mage_Api.csv
+++ b/app/locale/nl_NL/Mage_Api.csv
@@ -15,4 +15,7 @@
 "User Name","Gebruikersnaam"
 "WS-I Compliance","WS-I Compliance"
 "Web Services","Webservices"
+"Web Services Configuration","Web Services Configuration"
+"Web Services definition files (api.xml).","Web Services definition files (api.xml)."
+"Web Services definition files (api2.xml).","Web Services definition files (api2.xml)."
 "Your account has been deactivated.","Uw account is gedeactiveerd."
