--- a/app/locale/nl_NL/Mage_Catalog.csv
+++ b/app/locale/nl_NL/Mage_Catalog.csv
@@ -79,6 +79,7 @@
 "Anchor Custom Text","Eigen Linktekst"
 "Anchor Custom Title","Eigen Linktitel"
 "Applicable to catalog products and categories only. Any media content will be inserted into editor as a static URL. It is not updated if the system configuration base URL changes.","Alleen van toepassing op producten en categorieën. Alle media zal worden ingevoegd in de editor als statische URL. Deze wordt niet geupdate als de systeem URL aangepast wordt."
+"Apply MAP","Minimum geadverteerde verkoopprijs toepassen"
 "Apply MAP (Default Value)","Minimum geadverteerde verkoopprijs toepassen"
 "Apply To","Toepassen op"
 "Approved","Goedgekeurd"
@@ -267,6 +268,7 @@
 "Display Page Control","Toon paginering"
 "Display Price Interval as One Price","Toon prijs-stap als één prijs"
 "Display Product Count","Toon aantal producten"
+"Display Product Options In","Display Product Options In"
 "Display Type","Weergave modus"
 "Display in Suggested Terms","In voorgestelde termen tonen"
 "Double click on a group to rename it","Dubbelklik op een groep om te hernoemen"
@@ -290,6 +292,7 @@
 "Empty","Leeg"
 "Enable MAP","Activeer minimum geadverteerde verkoopprijs"
 "Enable Qty Increments","Activeer aantal-stappen"
+"Enable Recurring Profile","Enable Recurring Profile"
 "Enable WYSIWYG","WYSIWYG activeren"
 "Enable for reindexing a big number of SKUs.","Schakel het herindexeren in voor grote aantal SKUs"
 "Enabled","Ingeschakeld"
@@ -328,6 +331,7 @@
 "Globally Editable","Systeembreed bewerkbaar"
 "Go to Home Page","Ga naar Home"
 "Grid","Fototabel"
+"Group Price","Group Price"
 "Group add","Groep toevoegen"
 "Group remove","Groep verwijderen"
 "Grouped Product","Gegroepeerd product"
@@ -371,7 +375,10 @@
 "Invalid store specified, skipping the record.","Ongeldige winkel opgegeven, record wordt overgeslagen."
 "Invalid tier prices. The product is not associated to the requested website.","Ongeldige prijzen. Het product kan niet geassocieerd worden met de opgegeven website."
 "Inventory","Voorraad"
+"Is Active","Is actief"
+"Is Anchor","Is anker"
 "Is Default","Is standaard"
+"Is Product Available for Purchase with Google Checkout","Is Product Available for Purchase with Google Checkout"
 "Is Required","Is verplicht"
 "Items %s to %s of %s total","Artikelen %s tot %s van %s in totaal"
 "Items that you do not want to show in the catalog or search results should have status 'Disabled' in the desired store.","Items die u niet wilt laten zien in de catalogus of zoekopdrachten moeten de status 'Disabled' krijgen in de opgegeven winkel."
@@ -403,6 +410,7 @@
 "Manage Products","Beheer producten"
 "Manage Stock","Voorraad beheren"
 "Manage Titles (Size, Color, etc.)","Beheer titels (grootte, kleur, etc)"
+"Manufacturer's Suggested Retail Price","Manufacturer's Suggested Retail Price"
 "Max Characters","Max tekens"
 "Maximal Depth","Maximale diepte"
 "Maximum Image Size","Maximum grootte afbeelding"
@@ -513,6 +521,7 @@
 "Price values for options should be specified in system base currency.","Prijzen voor opties moeten worden opgegeven in de basis-valuta"
 "Price:","Prijs:"
 "Price: %s","Prijs: %s"
+"Prices","Prijzen"
 "Print This Page","Print deze pagina"
 "Product","Product"
 "Product API","Product-API"
@@ -561,6 +570,7 @@
 "Products per Page on Grid Default Value","Toegestane waarden voor tabel-weergave van producten per pagina"
 "Products per Page on List Allowed Values","Toegestane waarden voor producten per pagina in lijstweergave"
 "Products per Page on List Default Value","Standaardwaarde voor producten per pagina in lijstweergave"
+"Products with recurring profile participate in catalog as nominal items.","Products with recurring profile participate in catalog as nominal items."
 "Properties","Eigenschappen"
 "Qty","Aantal"
 "Qty Increments","Aantal-stappen"
@@ -573,6 +583,7 @@
 "Quick simple product creation","Snel een simpel product aanmaken"
 "Records for ""","Records for """
 "Records for ""%s"" store found.","Aantallen voor ""%s"" winkel gevonden"
+"Recurring Profile","Recurring Profile"
 "Redirect","Doorsturen"
 "Redirect URL","Doorstuur URL"
 "Regular Price:","Normale prijs:"
@@ -653,6 +664,8 @@
 "Set Ascending Direction","Van laag naar hoog sorteren"
 "Set Descending Direction","Van hoog naar laag sorteren"
 "Set Name","Naam instellen"
+"Set Product as New from Date","Set Product as New from Date"
+"Set Product as New to Date","Set Product as New to Date"
 "Set Root Category for Store","Basiscategorie voor winkel instellen"
 "Set root category for this store in the <a href=""%s"">configuration</a>","Basiscategorie instellen voor deze winkel in de <a href=""%s"">configuratie</a>"
 "Set special price","Aanbiedingprijs instellen"
@@ -663,6 +676,7 @@
 "Share on Twitter","Auf Twitter teilen"
 "Shop By","Winkelen per"
 "Shopping Options","Selectie verfijnen"
+"Short Description","Short Description"
 "Show","Toon"
 "Show Details","Details tonen"
 "Show Tags","Labels tonen"
@@ -685,6 +699,8 @@
 "Sort Order","Sorteervolgorde"
 "Source Model","Bron model"
 "Special Expires On: %s","Aanbieding verloopt op: %s"
+"Special Price From Date","Special Price From Date"
+"Special Price To Date","Special Price To Date"
 "Special Price:","Aanbiedingsprijs:"
 "Special Price: %s","Aanbiedingsprijs: %s"
 "Starting at:","Beginnend op:"
@@ -753,6 +769,7 @@
 "This product no longer exists.","Dit product bestaat niet meer"
 "This search no longer exists.","Deze zoekopdracht bestaat niet meer"
 "This setting will be applied when all prices in the specific price interval are equal.","This setting will be applied when all prices in the specific price interval are equal."
+"Tier Price","Tier Price"
 "Tier Pricing","Staffelprijzen"
 "Tile","Tegel"
 "Time Format","Tijdsformaat"
