--- a/app/locale/nl_NL/Mage_Cms.csv
+++ b/app/locale/nl_NL/Mage_Cms.csv
@@ -2,18 +2,23 @@
 "A directory with the same name already exists. Please try another folder name.","Er bestaat al een directory met dezelfde naam."
 "A page URL key for specified store already exists.","Er bestaat al een pagina met deze URL."
 "Action","Actie"
+"Active From","Active From"
+"Active To","Active To"
 "Add New Block","Nieuw blok toevoegen"
 "Add New Page","Nieuwe pagina toevoegen"
 "All Countries","Alle landen"
 "An error occurred while saving the page.","Pagina kon niet opgeslagen worden. Probeer het opnieuw."
 "Anchor Custom Text","Eigen linktekst"
 "Anchor Custom Title","Eigen linktitel"
+"Apply To Products","Apply To Products"
 "Are you sure you want to delete current folder?","Wilt u de huidige map verwijderen?"
 "Are you sure you want to delete the selected file?","Wilt u het geselecteerde bestand verwijderen?"
+"Available Product Listing Sort By","Available Product Listing Sort By"
 "Block","Blok"
 "Block Information","Blok informatie"
 "Block Title","Bloktitel"
 "CMS","CMS"
+"CMS Block","CMS Block"
 "CMS Content Wrapper","CMS-content-wrapper"
 "CMS Home Page","CMS-pagina > Voorpagina"
 "CMS No Cookies Page","CMS geen Cookies pagina"
@@ -40,10 +45,12 @@
 "Custom Design From","Eigen ontwerp vanaf datum"
 "Custom Design To","Eigen ontwerp tot datum"
 "Custom Layout","Eigen lay-out"
+"Custom Layout Update","Eigen lay-out update"
 "Custom Layout Update XML","Eigen XML lay-out update"
 "Custom Theme","Eigen Thema"
 "Customer Tax Class Information","Gegevens btw-tariefgroep klant"
 "Date Created","Datum aangemaakt"
+"Default Product Listing Sort By","Default Product Listing Sort By"
 "Delete Block","Blok verwijderen"
 "Delete File","Bestand verwijderen"
 "Delete Folder","Map verwijderen"
@@ -53,6 +60,8 @@
 "Disabled","Uitgeschakeld"
 "Disabled Completely","Compleet gedeactiveerd"
 "Disabled by Default","Standaard gedeactiveerd"
+"Display Mode","Display Mode"
+"Display Settings","Display Settings"
 "Edit Block","Blok bewerken"
 "Edit Block '%s'","Blok '%s' bewerken"
 "Edit Page","Pagina Bewerken"
@@ -68,19 +77,24 @@
 "Identifier","Identifier"
 "If empty, the Page Title will be used","Indien leeg, zal de paginatitel gebruikt worden"
 "Images (%s)","Afbeelding (%s)"
+"Include in Navigation Menu","Include in Navigation Menu"
 "Insert File","Bestand invoegen"
 "Invalid folder name. Please, use alphanumeric characters, underscores and dashes.","Ongeldige map naam. Gebruik letters en streepjes."
 "Keywords","Keywords"
 "Last Modified","Laatst gewijzigd"
+"Layered Navigation Price Step","Layered Navigation Price Step"
 "Layout","Lay-out"
 "Layout Update XML","Lay-out update XML"
 "Link to a CMS Page","Link naar een CMS-pagina"
 "Manage Pages","Beheer pagina's"
+"Maximum 255 chars","Maximum 255 chars"
 "Media Gallery","Mediagallerij"
 "Media Storage","Media opslag"
-"Meta Data","Meta-informatie"
+"Meta Data","Meta-gegevens"
 "Meta Description","Meta-omschrijving"
+"Meta Information","Meta-informatie"
 "Meta Keywords","Meta-keywords"
+"Meta Title","Meta-titel"
 "New Block","Nieuw blok"
 "New Folder Name:","Nieuwe mapnaam"
 "New Page","Nieuwe pagina"
@@ -116,9 +130,11 @@
 "The static block content cannot contain directive with its self.","De inhoud van het content blok laadt zichzelf in."
 "This block no longer exists.","Dit blok bestaat niet langer meer"
 "This page no longer exists.","Deze pagina bestaat niet langer meer"
+"Thumbnail Image","Miniatuurafbeelding"
 "Title","Titel"
 "URL Key","URL key"
 "Unable to find a block to delete.","Het te verwijderen blok is niet gevonden"
 "Unable to find a page to delete.","De te verwijderen pagina is niet gevonden"
+"Use Parent Category Settings","Use Parent Category Settings"
 "WYSIWYG Options","WYSIWYG opties"
 "px.","px."
