--- a/app/locale/nl_NL/Mage_Core.csv
+++ b/app/locale/nl_NL/Mage_Core.csv
@@ -49,6 +49,7 @@
 "Before modifying the store view code please make sure that it is not used in index.php.","Controleer voordat u de winkelzicht aanpast, of het niet gebruikt wordt in index.php"
 "Before modifying the website code please make sure that it is not used in index.php.","Controleer voordat u de winkelzicht aanpast, of het niet gebruikt wordt in index.php"
 "Block with name ""%s"" already exists","Blok met naam ""%s"" bestaat al"
+"Blocks HTML output","Blocks HTML output"
 "Browser Capabilities Detection","Detectie van browsermogelijkheden"
 "CSRF protection","CSRF protection"
 "CSS Settings","CSS instellingen"
@@ -61,7 +62,10 @@
 "Cannot complete this operation from non-admin area.","Kan deze actie niet voltooien vanuit een niet-admin gebied"
 "Card type does not match credit card number.","Kaartnummer niet herkend door creditcard-maatschappij/"
 "Code","Interne naam"
+"Collection data files.","Collection data files."
+"Collections Data","Collections Data"
 "Comma-delimited list of files that will be included inside &lt;style&gt; tag for all templates that include use the '{{var non_inline_styles}}' variable. File path is relative to skin/frontend/PACKAGE/THEME/css/","Door komma's gescheiden lijst van bestanden die worden opgenomen in de tag &lt;style&gt; voor alle sjablonen die de variabele '{{var non_inline_styles}}' bevatten. Bestandspad is relatief voor skin/frontend/PACKAGE/THEME/css/"
+"Configuration","Configuration"
 "Controller file was loaded but class does not exist","Controller-bestand is geladen, maar de class bestaat niet"
 "Cookie Domain","Cookie Domein"
 "Cookie Lifetime","Cookie levensduur"
@@ -114,6 +118,7 @@
 "Developer Client Restrictions","Beperk bewerkingen in omgeving o.b.v. IP adres"
 "Disable Email Communications","Schakel e-mailcommunicatie uit"
 "Disable Modules Output","Schakel uitvoer van modules uit"
+"Disabling this setting can increase security risk.","Disabling this setting can increase security risk."
 "Display Demo Store Notice","Toon melding demowinkel"
 "Duplicate Of Template Name","Kopie van sjabloon-naam"
 "Edit Design Change","Ontwerp verandering bewerken"
@@ -126,6 +131,8 @@
 "Email Header Template","E-mail - Sjabloon voor koptekst"
 "Empty identifier field name","Lege identifier van veldnaam"
 "Empty main table name","Lege naam hoofdtabel"
+"Enable CAPTCHA in Admin","Enable CAPTCHA in Admin"
+"Enable CAPTCHA on Frontend","Enable CAPTCHA on Frontend"
 "Enable Charts","Grafieken tonen"
 "Enabled","Ingeschakeld"
 "Enabled for Admin","Ingeschakeld voor backend"
@@ -134,6 +141,7 @@
 "Enabling this setting increases risk of automated attacks against admin functionality.","Enabling this setting increases risk of automated attacks against admin functionality."
 "Environment Update Time","Update tijd"
 "Error in file: ""%s"" - %s","Fout in bestand: ""%s"" - %s"
+"Escape CSV fields","Escape CSV fields"
 "European Union Countries","Landen uit Europese Unie"
 "Exceptions Log File Name","Bestandsnaam uitzonderingen-log"
 "Favicon Icon","Favicon Icoon"
@@ -182,6 +190,8 @@
 "Invalid website\'s configuration path: %s","Ongeldig website\'s configuratie-pad: %s"
 "JavaScript Settings","JavaScript instellingen"
 "Layout","Lay-out"
+"Layout building instructions.","Layout building instructions."
+"Layouts","Layouts"
 "Leave empty for access from any location.","Indien het veld leeg is, zal deze functionaliteit voor iedereen zichtbaar zijn"
 "List of stores","Lijst met winkels"
 "Locale","Taal"
@@ -223,6 +233,7 @@
 "Only necessary if image has been uploaded above. Enter number of pixels, without appending ""px"".","Alleen nodig als bovenstaande afbeelding is geüpload. Voer het aantal pixels in, zonder toevoeging van ""px""."
 "PHP SOAP extension is required.","PHP SOAP extensie is nodig."
 "Package","Pakket"
+"Page blocks HTML.","Page blocks HTML."
 "Pagination","Paginering"
 "Pagination Frame","Paginering frame"
 "Pagination Frame Skip","Paginering frame aantal overslaan"
@@ -338,6 +349,7 @@
 "Store with the same code","Opslaan met dezelfde code"
 "System","Systeem"
 "System Log File Name","Bestandsnaam 'system log'"
+"System(config.xml, local.xml) and modules configuration files(config.xml).","System(config.xml, local.xml) and modules configuration files(config.xml)."
 "Template Path Hints","Hints template-pad"
 "Template Settings","Template instellingen"
 "Template Variables","Templatevariabelen"
@@ -374,6 +386,7 @@
 "Transactional Emails","Transactionele e-mails"
 "Translate Inline","Inline vertaling"
 "Translate, blocks and other output caches should be disabled for both frontend and admin inline translations.","Deactiveer de vertaalcache voor zowel frontend als backend."
+"Translation files.","Vertaalbestanden."
 "Translations","Vertalingen"
 "Two and more slashes together are not permitted in request path","Twee of meer slashes achter elkaar zijn niet toegestaan in het verzoekpad."
 "Two and more slashes together are not permitted in url rewrite suffix","Twee of meer slashes achter elkaar zijn niet toegestaan in de url-rewrite suffix."
@@ -413,6 +426,7 @@
 "Website with the same code","Website met dezelfde code"
 "Weekend Days","Weekenddagen"
 "Welcome Text","Welkomsttekst"
+"Windows server only","Windows server only"
 "Wrong file info format","Verkeerd bestandsinformatie formaat"
 "Wrong number of arguments for %s","Fout aantal argumenten voor %s"
 "Wrong old style column type definition: {$definition}.","Verkeerde oude-stijl-kolom-type-definitie: {$definition}."
