--- a/app/locale/nl_NL/Mage_Oauth.csv
+++ b/app/locale/nl_NL/Mage_Oauth.csv
@@ -30,6 +30,7 @@
 "Callback URL","Callback-URL"
 "Cleanup Probability","Opruim-waarschijlijkheid"
 "Cleanup Settings","Opruim-instellingen"
+"Cleanup entries older than X minutes.","Opschoning-items ouder dan X minuten."
 "Close","Sluiten"
 "Confirm OAuth token authorization","Bevestig OAuth-token-autorisatie"
 "Confirm token authorization Pop Up for admin","Bevestig token-autorisatie-pop-up voor administrator"
@@ -55,6 +56,7 @@
 "Expiration Period","Verloop-periode"
 "Give the verifier code to application administrator","Geef de verificatiec-code aan de applicatie-beheerder"
 "ID","Id"
+"Integer. Launch cleanup in X OAuth requests. 0 (not recommended) - to disable cleanup","Integer. Launch cleanup in X OAuth requests. 0 (not recommended) - to disable cleanup"
 "Invalid Callback URL","Ongeldige Callback-URL"
 "Invalid ID parameter.","Ongeldige ID-parameter"
 "Invalid Rejected Callback URL","Ongeldige afgewezen-Callback-URL"
