--- a/app/locale/nl_NL/Mage_Eav.csv
+++ b/app/locale/nl_NL/Mage_Eav.csv
@@ -55,6 +55,7 @@
 "Default Value","Standaard waarde"
 "Default option value is not defined","Waarde van standaardoptie is niet gedefinieerd"
 "Delete","Verwijderen"
+"Delivery Date","Bezorgdatum"
 "Dropdown","Dropdown"
 "EAV types and attributes","EAV types and attributes"
 "Email","E-mail"
@@ -63,6 +64,7 @@
 "Entity instance is not defined","Entiteit-instantie niet gedefinieerd"
 "Entity is not initialized","Entiteit is niet geïnitialiseerd"
 "Entity object is undefined","Entiteit is niet opgegeven"
+"Entity types declaration cache.","Entiteittypen declaratie cache."
 "Failed to load node %s from config","Niet gelukt op node %s te laden vanuit configuratie."
 "For internal use. Must be unique with no spaces. Maximum length of attribute code must be less then %s symbols","Voor intern gebruik. Moet uniek zijn zonder spaties. Maximale lengte van attribuut-code moet minder zijn dan %s karakters."
 "Form Element with the same attribute","Form-element met dezelfde attribuut"
