--- a/app/locale/nl_NL/Mage_Adminhtml.csv
+++ b/app/locale/nl_NL/Mage_Adminhtml.csv
@@ -184,6 +184,7 @@
 "Block Details","Blok details"
 "Block Information","Blok informatie"
 "Block Name","Blok naam"
+"Block Name is disallowed.","De bloknaam is niet toegestaan."
 "Block Name is incorrect.","Bloknaam is onjuist."
 "Block Name is required field.","Bloknaam is verplicht veld."
 "Block has been deleted.","Blokkeren is verwijderd."
@@ -339,6 +340,7 @@
 "Direction:","Richting:"
 "Disable","Uitschakelen"
 "Disabled","Uitgeschakeld"
+"Disallowed block name for frontend.","Bloknaam niet toegestaan voor frontend."
 "Display %s first","%s eerst weergeven"
 "Display default currency","Standaardvaluta weergeven"
 "Distributed under GNU LGPL. See %s for details.","Uitgebracht onder GNU LGP licentie. Voor details zie %s."
