--- a/app/locale/nl_NL/Mage_Catalog.csv
+++ b/app/locale/nl_NL/Mage_Catalog.csv
@@ -268,7 +268,7 @@
 "Display Page Control","Toon paginering"
 "Display Price Interval as One Price","Toon prijs-stap als één prijs"
 "Display Product Count","Toon aantal producten"
-"Display Product Options In","Display Product Options In"
+"Display Product Options In","Toon productopties in"
 "Display Type","Weergave modus"
 "Display in Suggested Terms","In voorgestelde termen tonen"
 "Double click on a group to rename it","Dubbelklik op een groep om te hernoemen"
@@ -336,6 +336,7 @@
 "Group remove","Groep verwijderen"
 "Grouped Product","Gegroepeerd product"
 "Groups","Groepen"
+"HTML tags are not allowed in SKU attribute.","HTML-tags zijn niet toegestaan in SKU-attribuut."
 "Home","Home"
 "ID","Id"
 "ID: %s","ID: %s"
@@ -367,6 +368,7 @@
 "Invalid block: %s.","Ongeldig block: %s."
 "Invalid category IDs.","Ongeldige categorie-IDs."
 "Invalid category.","Ongeldige categorie."
+"Invalid custom option(s).","Ongeldige aangepaste opties."
 "Invalid image file type.","Ongeldig afbeeldingstype map."
 "Invalid image type.","Ongeldig afbeeldingstype"
 "Invalid option ID specified for %s (%s), skipping the record.","Ongeldige optie-ID gespecificeerd voor %s (%s), record wordt overgeslagen."
@@ -462,6 +464,7 @@
 "Not Visible Individually","Niet individueel zichtbaar"
 "Notify Low Stock RSS","RSS voor melding weinig voorraad"
 "Notify for Quantity Below","Melden bij aantal lager dan"
+"Nowhere","Nergens"
 "Number of Products per Page","Aantal producten per pagina"
 "Number of Products to Display","Aantal producten op de display"
 "Number of Uses","Aantal keer gebruikt"
@@ -583,7 +586,8 @@
 "Quick simple product creation","Snel een simpel product aanmaken"
 "Records for ""","Records for """
 "Records for ""%s"" store found.","Aantallen voor ""%s"" winkel gevonden"
-"Recurring Profile","Recurring Profile"
+"Recurring Payment Profile","Terugkerend betalingsprofiel"
+"Recurring Profile","Terugkerend profiel"
 "Redirect","Doorsturen"
 "Redirect URL","Doorstuur URL"
 "Regular Price:","Normale prijs:"
