--- a/app/locale/nl_NL/Mage_Core.csv
+++ b/app/locale/nl_NL/Mage_Core.csv
@@ -223,6 +223,7 @@
 "Module ""%1$s"" cannot depend on ""%2$s"".","Module ""%1$s"" kan niet afhankelijk zijn van ""%2$s""."
 "Module ""%1$s"" requires module ""%2$s"".","Module ""%1$s"" heeft module ""%2$s"" nodig."
 "Name","Naam"
+"New Admin User Create Notification","Nieuwe admin-gebruiker maakt een melding aan de nieuwe admin-gebruiker"
 "New Design Change","Nieuwe ontwerpverandering"
 "New Store","Nieuwe winkel"
 "New Store View","Nieuw winkelzicht"
@@ -375,6 +376,7 @@
 "This category only","Alleen deze categorie"
 "This date is a required value.","Datum is een verplicht veld."
 "This is a required field.","Dit is een verplicht veld."
+"This setting enable notification when new admin user created.","Deze instelling laat een melding toe wanneer een nieuwe admin-gebruiker een."
 "This store cannot be deleted.","Deze winkel kan niet worden verwijderd."
 "This store view cannot be deleted.","Het winkelzicht kan niet worden verwijderd."
 "This website cannot be deleted.","Deze website kan niet worden verwijderd."
