--- a/app/locale/nl_NL/Mage_Customer.csv
+++ b/app/locale/nl_NL/Mage_Customer.csv
@@ -43,6 +43,7 @@
 "Are you sure?","Weet u het zeker?"
 "Array of Entity collections is expected.","Array van 'Entity collections' wordt verwacht"
 "Assign a Customer Group","Klantgroep toewijzen"
+"Associate to Website","Associëren met website"
 "Average Sale","Gemiddeld bedrag"
 "Back","Terug"
 "Back - link to the previously viewed page","Terug naar vorige pagina"
@@ -86,6 +87,7 @@
 "Create an Account","Account aanmaken"
 "Create customer","Klant aanmaken"
 "Create customer address","Klantadres aanmaken"
+"Created From","Gemaakt van"
 "Current Admin Password","Current Admin Password"
 "Current Password","Huidig wachtwoord"
 "Customer","Klant"
@@ -117,6 +119,7 @@
 "DD","DD"
 "Date","Datum"
 "Date Added","Datum toegevoegd"
+"Date Of Birth","Geboortedatum"
 "Date of Birth","Geboortedatum"
 "Day","Dag"
 "Days in Wishlist","Dagen op verlanglijst"
@@ -125,7 +128,7 @@
 "Default Email Domain","Standaard e-maildomein"
 "Default Group","Standaardgroep"
 "Default Shipping Address","Standaard leveringsadres"
-"Default Value for Disable Automatic Group Changes Based on VAT ID","Standaard-waarde voor 'Uitschakelen automatische verandering van groep a.h.v. BTW-nummer.'"
+"Default Value for Disable Automatic Group Changes Based on VAT ID","Standaard-waarde voor 'Uitschakelen automatische verandering van groep a.h.v. btw-nummer.'"
 "Default Welcome Email","Standaard welkomstmail"
 "Delete","Verwijder"
 "Delete Address","Adres verwijderen"
@@ -135,6 +138,7 @@
 "Delete customer address","Klantadres verwijderen"
 "Deleted Stores","Verwijderde winkels"
 "Details","Details"
+"Disable Automatic Group Change Based on VAT ID","Schakel automatische groepswijziging uit op basis van btw-nummer."
 "Disabled","Uitgeschakeld"
 "Edit","Wijzigen"
 "Edit Account Info","Accountinformatie bewerken"
@@ -197,7 +201,8 @@
 "Invalid email address ""%s"".","Ongelding e-mailadres ""%s""."
 "Invalid email address.","Ongeldig e-mailadres"
 "Invalid login or password.","Ongeldige gebruikersnaam en/of wachtwoord."
-"Invalid password reset token.","Ongeldige wachtwoord-resettoken"
+"Invalid password reset customer Id.","Ongeldige wachtwoord-reset-klant ID."
+"Invalid password reset token.","Ongeldige wachtwoord-reset-token."
 "Invalid shipping address for (%s)","Ongeldige verzendadres voor (%s)"
 "Invalid store specified, skipping the record.","Ongeldige winkel gespecificeerd. Record wordt overgeslagen."
 "Invalid website, skipping the record, line: %s","Ongeldige website, record wordt overgeslagen, regel %s"
@@ -391,6 +396,7 @@
 "Tag Name","Tag-naam"
 "Tax Calculation Based On","Btw berekening op basis van"
 "Tax Class","Btw-groep"
+"Tax/VAT Number","Btw-nummer"
 "Tax/VAT number","Btw-nummer"
 "Telephone","Telefoonnummer"
 "Text","Tekst"
@@ -420,7 +426,7 @@
 "The suffix that goes after name (Jr., Sr., etc.)","De afkorting die achter de naam staat (Jr., Sr., etc.)"
 "The title that goes before name (Mr., Mrs., etc.)","De aanhef die voor de naam staat (heer, mevrouw, etc.)"
 "There are no items in customer's wishlist at the moment","Er staan momenteel geen artikelen op de verlanglijst van de klant"
-"There are no items in customer\'s shopping cart at the moment","Er zitten geen producten in de klant\'s winkelwagen op dit moment."
+"There are no items in customer's shopping cart at the moment","Er zitten geen producten in de klant\'s winkelwagen op dit moment."
 "There is already an account with this email address. If you are sure that it is your email address, <a href=""%s"">click here</a> to get your password and access your account.","Er bestaat al een registratie met dit e-mailadres. Is dit uw e-mailadres, <a href=""%s"">klik dan hier</a> om uw wachtwoord toegestuurd te krijgen."
 "There was an error validating the VAT ID.","Er is een fout opgetreden bij het valideren van het BTW-nummer."
 "There was an error validating the VAT ID. The customer would belong to Customer Group %s.","Er is een fout opgetreden bij het valideren van het BTW-nummer. De klant zou bij klantgroep %s behoren."
