--- a/app/locale/nl_NL/Mage_ImportExport.csv
+++ b/app/locale/nl_NL/Mage_ImportExport.csv
@@ -72,6 +72,7 @@
 "Import successfully done.","Importeren succesvol afgerond"
 "Import/Export","Importeren/Exporteren"
 "In/Out","In/Uit"
+"Incorrect entity type","Onjuist entiteittype"
 "Input entity code is not equal to entity adapter code","Input entity-code is niet gelijk aan entity-adapter-code"
 "Invalid entity","Ongeldige entity"
 "Invalid entity model","Ongeldige entiteit model"
@@ -80,6 +81,7 @@
 "Invalid seek position","Ongeldige zoekpositie"
 "Invalid value for '%s'","Ongeldige waarde voor '%s'"
 "Invalid value for '%s' column","Ongeldige waarde voor kolom %s"
+"Invalid value in SKU column. HTML tags are not allowed","Ongeldige waarde in SKU kolom. HTML-tags zijn niet toegestaan."
 "No filter data provided","Geen filterdata geleverd"
 "No source specified","Geen bron gespecificeerd"
 "No valid data sent","Geen geldige data verstuurd"
