--- a/app/locale/nl_NL/Mage_Usa.csv
+++ b/app/locale/nl_NL/Mage_Usa.csv
@@ -96,6 +96,7 @@
 "FedEx Envelope","FedEx enveloppe"
 "FedEx Pak","FedEx pakket"
 "FedEx Tube","FedEx koker"
+"Field ""%s"" has wrong value.","Veld ""%s"" heeft een verkeerde waarde."
 "First Overnight","Deze nacht"
 "First-Class","Eerste klasse"
 "First-Class Mail International Large Envelope","First-Class Mail International Large Envelope"
@@ -110,6 +111,7 @@
 "First-Class Mail Stamped Letter","First-Class Mail Stamped Letter"
 "First-Class Package International Service","First-Class Package International Service"
 "First-Class Package Service","First-Class Package Service"
+"First-Class Package Service - Retail","First-Class Package Service - Retail"
 "First-Class Package Service Hold For Pickup","First-Class Package Service Hold For Pickup"
 "Flat","Gelijk"
 "Flat-Rate Box","Gelijk-tarief doos"
@@ -166,6 +168,7 @@
 "Medium Express Box","Medium Express Box"
 "Merchandise","Merchandise"
 "Meter Number","Meter Number"
+"Method toOptionArray not found in source model.","Method toOptionArray not found in source model."
 "Minimum Order Amount for Free Shipping","Minimum bestelbedrag voor franco verzending"
 "Minimum Package Weight (Please consult your shipping carrier for minimum supported shipping weight)","Minimum Pakket Gewicht (neem contact op met uw logistieke dienstverlener om dit te achterhalen)"
 "Mode","Type"
@@ -281,7 +284,7 @@
 "Residential","Particulier"
 "Residential Delivery","Particulier adres"
 "Response is in the wrong format","Antwoord is in het onjuiste formaat"
-"Retail Ground","Retail Ground"
+"Retail Ground","Retail Ground (vroeger: 'Standard Post')"
 "Return","Return"
 "Round","Rond"
 "Routing barcode is missing","Routing barcode is missing"
