--- a/app/locale/nl_NL/Mage_Core.csv
+++ b/app/locale/nl_NL/Mage_Core.csv
@@ -243,6 +243,8 @@
 "Path ""%value%"" is protected and cannot be used.","Pad ""%value%"" is beveiligd en kan niet worden gebruikt."
 "Path ""%value%"" may not include parent directory traversal (""../"", ""..\\).""","Path ""%value%"" may not include parent directory traversal (""../"", ""..\\)."""
 "Please define flag code.","Definieer 'flag code' a.u.b."
+"Please do not use ""event"" for an attribute code.","Gebruik a.u.b. geen ""event"" voor een attribuut-code."
+"Please do not use event"" for an attribute code.""","Gebruik a.u.b. geen ""event"" voor een attribuut-code."
 "Please enter 6 or more characters without leading or trailing spaces.","Voer alstublieft 6 of meer tekens in zonder voorloop- of volgspaties."
 "Please enter 6 or more characters. Leading or trailing spaces will be ignored.","Voer a.u.b. zes of meer tekens in. Spaties aan begin of eind zullen worden genegeerd."
 "Please enter 7 or more characters. Password should contain both numeric and alphabetic characters.","Voer a.u.b. zes of meer tekens in Wachtwoorden moeten zowel numerieke en alfanumerieke tekens bevatten."
