--- a/app/locale/nl_NL/Mage_Customer.csv
+++ b/app/locale/nl_NL/Mage_Customer.csv
@@ -426,7 +426,7 @@
 "The suffix that goes after name (Jr., Sr., etc.)","De afkorting die achter de naam staat (Jr., Sr., etc.)"
 "The title that goes before name (Mr., Mrs., etc.)","De aanhef die voor de naam staat (heer, mevrouw, etc.)"
 "There are no items in customer's wishlist at the moment","Er staan momenteel geen artikelen op de verlanglijst van de klant"
-"There are no items in customer's shopping cart at the moment","Er zitten geen producten in de klant\'s winkelwagen op dit moment."
+"There are no items in customer\'s shopping cart at the moment","Er zitten geen producten in de klant\'s winkelwagen op dit moment."
 "There is already an account with this email address. If you are sure that it is your email address, <a href=""%s"">click here</a> to get your password and access your account.","Er bestaat al een registratie met dit e-mailadres. Is dit uw e-mailadres, <a href=""%s"">klik dan hier</a> om uw wachtwoord toegestuurd te krijgen."
 "There was an error validating the VAT ID.","Er is een fout opgetreden bij het valideren van het BTW-nummer."
 "There was an error validating the VAT ID. The customer would belong to Customer Group %s.","Er is een fout opgetreden bij het valideren van het BTW-nummer. De klant zou bij klantgroep %s behoren."
