--- a/app/locale/nl_NL/Mage_Eav.csv
+++ b/app/locale/nl_NL/Mage_Eav.csv
@@ -29,6 +29,8 @@
 "'%value%' does not appear to be a valid URI hostname","'%value%' is geen geldige URI hostname"
 "'%value%' does not appear to be a valid local network name","'%value%' lijkt geen geldige netwerknaam te zijn."
 "'%value%' does not match the expected structure for a DNS hostname","'%value%' matcht niet de verwachte structuur voor een DNS-hostname"
+". Do not use ""event"" for an attribute code, it is a reserved keyword.",". Gebruik geen ""event"" voor een attribuut-code, het is een gereserveerd trefwoord."
+". Do not use event"" for an attribute code, it is a reserved keyword.""",". Gebruik geen ""event"" voor een attribuut-code, het is een gereserveerd trefwoord."
 "A joint field with this alias (%s) is already declared","Een joint-field met deze alias (%s) is al gedeclareerd."
 "Add Option","Voeg optie toe"
 "An error occurred while loading a record, aborting. Error: %s","Er deed zich een fout voor tijdens het laden van een record, waardoor de bewerking werd afgebroken"
