--- a/app/locale/nl_NL/Mage_Wishlist.csv
+++ b/app/locale/nl_NL/Mage_Wishlist.csv
@@ -67,6 +67,7 @@
 "Options Details","Details opties"
 "Out of stock","Niet op voorraad"
 "Please enter a valid email addresses, separated by commas. For example johndoe@domain.com, johnsmith@domain.com.","Voer geldige e-mailadressen in, gescheiden door komma’s. Bijvoorbeeld iemand@domein.com, iemandanders@domein.com."
+"Please enter no more than 5 email addresses.","Gelieve niet meer dan vijf e-mailadressen in te vullen."
 "Please input a valid email address.","Voer een geldig E-mail adres in aub."
 "Please, enter your comments...","Voeg uw notities toe aub."
 "Price","Prijs"
@@ -90,6 +91,7 @@
 "This Wishlist has no Items","De verlanglijst heeft geen producten"
 "This product(s) is currently out of stock","De product(en) zijn momenteel niet op voorraad."
 "Unable to add the following product(s) to shopping cart: %s.","De volgende product(en) kunnen niet worden toegevoegd aan de winkelwagen: %s."
+"Up to 5 email addresses, separated by commas","Tot vijf e-mailadressen, gescheiden door komma's."
 "Update Wishlist","Verlanglijst bijwerken"
 "User Description","Omschrijving gebruiker"
 "User description","Omschrijving gebruiker"
