--- a/app/locale/nl_NL/Mage_Adminhtml.csv
+++ b/app/locale/nl_NL/Mage_Adminhtml.csv
@@ -112,6 +112,7 @@
 "Always (during development)","Altijd (tijdens ontwikkeling)"
 "Amounts","Bedragen"
 "An error has occured while syncronizing media storages.","Er is een fout opgetreden bij het synchroniseren van de media-opslag"
+"An error occurred while adding condition.","Er is een fout opgetreden tijdens het toevoegen van de voorwaarde."
 "An error occurred while clearing the JavaScript/CSS cache.","Er is een fout opgetreden bij het vernieuwen van de JavaScript / CSS cache."
 "An error occurred while clearing the configurable swatches image cache.","An error occurred while clearing the configurable swatches image cache."
 "An error occurred while clearing the image cache.","Er is een fout opgetreden bij het vernieuwen van de afbeeldingen cache."
@@ -122,6 +123,7 @@
 "An error occurred while deleting this set.","Er is een fout opgetreden bij het verwijderen van deze set"
 "An error occurred while deleting this template.","Er is een fout opgetreden bij het verwijderen van dit sjabloon"
 "An error occurred while finishing process. Please refresh the cache","Er is een fout opgetreden. Vernieuw de cache en probeer het opnieuw."
+"An error occurred while logging in.","Er is een fout opgetreden tijdens het inloggen."
 "An error occurred while rebuilding the CatalogInventory Stock Status.","Er is een fout opgetreden bij het herbouwen van de catalogus voorraadstatus"
 "An error occurred while rebuilding the catalog index.","Er is een fout opgetreden bij het herbouwen van de catalogus index"
 "An error occurred while rebuilding the flat catalog category.","Er is een fout opgetreden bij het herbouwen van de categorieën index"
@@ -277,6 +279,7 @@
 "Currency ""%s"" is used as %s in %s.","Valuta ""%s"" is gebruikt als %s in %s."
 "Currency Information","Valuta gegevens"
 "Currency Setup Section","Sectie Valuta instellingen"
+"Currency doesn\'t exist.","Valuta bestaat niet."
 "Current Admin Password","Current Admin Password"
 "Current Configuration Scope:","Scope huidige configuratie"
 "Current Month","Huidige maand"
@@ -504,6 +507,7 @@
 "Invalid password reset token.","Ongeldige wachtwoord-reset-token."
 "Invalid response","Ongeldig antwoord"
 "Invalid sender name ""%s"". Please use only visible characters and spaces.","Ongeldige verzender-naam ""%s"". Gebruik alleen zichtbare karakters en spaties."
+"Invalid template data.","Ongeldige sjabloongegevens."
 "Invalid template path used in layout update.","Invalid template path used in layout update."
 "Invalid timezone","Ongeldige tijdzone"
 "Invalidated","Ongeldig"
@@ -943,6 +947,7 @@
 "Self-assigned roles cannot be deleted.","Zelf toegeschreven rollen kunnen niet worden verwijderd."
 "Sender","Afzender"
 "Separate Email","Afzonderlijke e-mail"
+"Serialized data is incorrect","Geserialiseerde gegevens zijn onjuist"
 "Service Settings","Service instellingen"
 "Set up & Customize","Instellen & Aanpassen"
 "Shipment #%s comment added","Notitie toegevoegd aan verzendnummer %s"
