--- a/app/locale/nl_NL/Mage_Core.csv
+++ b/app/locale/nl_NL/Mage_Core.csv
@@ -119,6 +119,7 @@
 "Disable Email Communications","Schakel e-mailcommunicatie uit"
 "Disable Modules Output","Schakel uitvoer van modules uit"
 "Disabling this setting can increase security risk.","Disabling this setting can increase security risk."
+"Disallowed template variable method.","Verworpen sjabloonvariabele methode."
 "Display Demo Store Notice","Toon melding demowinkel"
 "Duplicate Of Template Name","Kopie van sjabloon-naam"
 "Edit Design Change","Ontwerp verandering bewerken"
@@ -175,6 +176,7 @@
 "Input type ""%value%"" not found in the input types list.","Input-soort ""%value%"" niet gevonden in input-soorten-lijst."
 "Invalid MIME type.","Ongeldig MIME-type."
 "Invalid URL '%value%'.","Ongeldige URL '%value%'."
+"Invalid URL scheme.","Ongeldig URL schema."
 "Invalid base url type","Ongeldig basis-URL type"
 "Invalid block name to set child %s: %s","Ongeldige bloknaam om kind in te stellen %s: %s"
 "Invalid block type: %s","Ongeldig bloktype: %s"
@@ -184,7 +186,8 @@
 "Invalid image.","Ongeldige afbeelding."
 "Invalid layout update handle","Ongeldige lay-out update handeling"
 "Invalid messages storage ""%s"" for layout messages initialization","Ongeldige berichtenopslag ""%s"" voor initialisatie lay-out berichten"
-"Invalid query","Ongeldige query"
+"Invalid query","Ongeldige query."
+"Invalid stream.","Ongeldige stroom."
 "Invalid transactional email code: ","Ongeldige transactionele e-mail-code:"
 "Invalid transactional email code: %s","Ongeldige transactionele e-mail-code: %s"
 "Invalid website\'s configuration path: %s","Ongeldig website\'s configuratie-pad: %s"
