--- a/app/locale/nl_NL/Mage_Page.csv
+++ b/app/locale/nl_NL/Mage_Page.csv
@@ -7,6 +7,7 @@
 "&copy; 2016 Magento Demo Store. All Rights Reserved.","&copy; 2016 Magento Demo shop. Alle rechten voorbehouden."
 "&copy; 2017 Magento Demo Store. All Rights Reserved.","&copy; 2017 Magento Demo shop. Alle rechten voorbehouden."
 "&copy; 2018 Magento Demo Store. All Rights Reserved.","&copy; 2018 Magento Demo shop. Alle rechten voorbehouden."
+"&copy; 2019 Magento Demo Store. All Rights Reserved.","&copy; 2019 Magento Demo shop. Alle rechten voorbehouden."
 "(Shift-)Click or drag to change value","(Shift)klik of sleep om waarde te veranderen."
 "(ver. %s)","(versie %s)"
 "- Click on any of the time parts to increase it","- Klik op tijdknop om te verhogen"
