--- a/app/locale/nl_NL/Mage_Paygate.csv
+++ b/app/locale/nl_NL/Mage_Paygate.csv
@@ -8,6 +8,7 @@
 "Authorize and Capture","Authoriseer en Capture"
 "Authorize.Net Transaction ID %s","Authorize.Net Transaction ID %s"
 "Authorize.net","Authorize.net"
+"Authorize.net (Deprecated)","Authorize.net (Deprecated)"
 "Cancel","Annuleer"
 "Centinel API URL","Centinel API URL"
 "Credit Card Types","Creditcard-maatschappij"
