[DA-134] Update FAQ translation

--- a/app/locale/nl_NL/Flagbit_Faq.csv
+++ b/app/locale/nl_NL/Flagbit_Faq.csv
@@ -5,7 +5,7 @@
 "All Store Views","Alle Store Views"
 "Answers","Antwoorden"
 "Back","Terug"
-"Back to the FAQ overview"," ""Terug naar het FAQ overzicht"
+"Back to the FAQ overview","Terug naar het FAQ overzicht"
 "Category","Categorie"
 "Category #","Categorienummer"
 "Category Information","Categorie informatie"
